--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
+    <script src="https://kit.fontawesome.com/883d38cfd1.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
