--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+<head>
+    <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React App</title>
     <script src="https://kit.fontawesome.com/883d38cfd1.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
+</head>
+<body>
 
-    <div id="root"></div>
+<div id="root"></div>
 
-  </body>
+</body>
 </html>
