add component cart-row-item.js, cart-row-list

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React App</title>
+    <title>Ticket-Service</title>
     <script src="https://kit.fontawesome.com/883d38cfd1.js" crossorigin="anonymous"></script>
 </head>
 <body>
